--- a/serve/template.html
+++ b/serve/template.html
@@ -74,7 +74,7 @@ textarea {
     </form>
     <hr />
     <table>
-        <tr><td>Override:</td><td><b>{{ .Mode }}</b></td></tr>
+        <tr><td>Override:</td><td><b>{{ .Override }}</b></td></tr>
         <tr><td>Manual:</td><td><b>{{ .Manual }}</b></td></tr>
     </table>
     <br />
