this does way more than schedule now

--- a/serve/template.html
+++ b/serve/template.html
@@ -98,7 +98,7 @@ textarea {
                     <option value="{{ $val }}">{{ $val }}</option>
                 {{end}}
             </select>
-            <input type="submit" value="Set Schedule" />
+            <input type="submit" value="Save" />
         </form>
         <br />
         <br />
