allow return URL here

--- a/serve/template.html
+++ b/serve/template.html
@@ -108,6 +108,10 @@ textarea {
     </div>
 <div class="footer">
     Version: {{ .Build }}
+{{ if $.HasReturn }}
+    <br />
+    <a href="{{ $.ReturnTo }}">back</a>
+{{end}}
 </div>
 </div>
 </body>
